# gun-violence

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/processed/: merged_country_data.csv  merged_us_county_data.csv  merged_us_mass_shooting_data.csv
data/raw/: us_county_mass_shootings.csv  us_county_mental_distress.csv  us_state_mental_illness.csv
docs/: index.html  report.html
notebooks/: 01_data_collection.ipynb  02_gun_homicide_map.ipynb  03_gini_correlation.ipynb  04_drug_correlation.ipynb  05_population_correlation.ipynb  06_gun_ownership_correlation.ipynb  07_gun_control_correlation.ipynb  08_us_data_collection.ipynb  12_us_population_correlation.ipynb  17_us_mass_shooting_data.ipynb  21_us_mass_shooting_population.ipynb
scripts/: generate_html.py  run_all.sh
src/: data_utils.py  us_county_data.py
